<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InputFragment">

    <LinearLayout
        android:id="@+id/date_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/date_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginEnd="3dp"/>
        <EditText
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hint_date"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weight_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/date_linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:text="@string/weight" />

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:digits="0123456789"
            android:hint="@string/hint_weight"
            android:inputType="number"
            android:maxLength="3"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_fat_percentage_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/weight_linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:text="@string/body_fat_percentage" />

        <EditText
            android:id="@+id/body_fat_percentage_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:digits="0123456789"
            android:hint="@string/hint_body_fat_percentage"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmi_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@+id/body_fat_percentage_linear_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:text="@string/bmi" />

        <EditText
            android:id="@+id/bmi_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:digits="0123456789"
            android:hint="@string/hint_bmi"
            android:inputType="number"
            android:maxLength="2"
            android:maxLines="1" />
    </LinearLayout>
    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_ok"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>